# VirtualFractureReconstructionSlicerExtension

./: CMakeLists.txt
VirtualFractureReconstruction/: CMakeLists.txt  qSlicerVirtualFractureReconstructionModule.cxx  qSlicerVirtualFractureReconstructionModule.h  qSlicerVirtualFractureReconstructionModuleWidget.cxx  qSlicerVirtualFractureReconstructionModuleWidget.h
VirtualFractureReconstruction/Logic/: CMakeLists.txt  vtkSlicerVirtualFractureReconstructionLogic.cxx  vtkSlicerVirtualFractureReconstructionLogic.h
VirtualFractureReconstruction/MRML/: CMakeLists.txt  vtkMRMLCLIFractureReconstructionPropertyNode.cxx  vtkMRMLCLIFractureReconstructionPropertyNode.h  vtkMRMLVirtualFractureReconstructionNode.cxx  vtkMRMLVirtualFractureReconstructionNode.h
VirtualFractureReconstruction/Resources/: qSlicerVirtualFractureReconstructionModule.qrc
VirtualFractureReconstruction/Resources/UI/: qSlicerVirtualFractureReconstructionModule.ui  qSlicerVirtualFractureReconstructionModuleWidget.ui
VirtualFractureReconstruction/Testing/Cxx/: CMakeLists.txt  qSlicerVirtualFractureReconstructionModuleWidgetTest.cxx
VirtualFractureReconstructionCLI/: CMakeLists.txt
VirtualFractureReconstructionCLI/Core/: CMakeLists.txt  FractureReconstructionCLI.cxx  FractureReconstructionCLI.xml  MultiFragmentRegistrator.cpp  MultiFragmentRegistrator.h  SampleExtractor.h  SampleExtractor.txx  ibiaComputeSignedDistanceMapFilter.h  ibiaComputeSignedDistanceMapFilter.txx  ibiaCorrespondingPointsIdentifier.h  ibiaCorrespondingPointsIdentifier.txx  ibiaCorrespondingPointsInitializer.h  ibiaCorrespondingPointsInitializer.txx  ibiaGaussianFilter.h  ibiaGaussianFilter.txx  ibiaImageDefinitions.h  ibiaSurfacePointExtractor.h  ibiaSurfacePointExtractor.txx  ibiaVTKMarchingCubes.h  ibiaVTKMarchingCubes.txx
VirtualFractureReconstructionCLI/Core/ICP/: EMICPWrapper.h.autosave  ICPWrapper.cpp  ICPWrapper.h
VirtualFractureReconstructionCLI/Core/ImageRegistration/: ImageRegistrationApp.h  ImageRegistrationApp.txx  MomentRegistrator.h  MomentRegistrator.txx  RigidRegistrator.h  RigidRegistrator.txx
VirtualFractureReconstructionCLI/Core/MeanCurvatureCalculator/: MeshOps.cxx  MeshOps.h  vtkComputeLocalGeometry.cxx  vtkComputeLocalGeometry.h
VirtualFractureReconstructionCLI/Core/Sheetness/: SheetnessImageCreator.h  SheetnessImageCreator.txx  itkDescoteauxSheetnessFeatureGenerator.h  itkDescoteauxSheetnessFeatureGenerator.txx  itkDescoteauxSheetnessImageFilter.h  itkFeatureGenerator.h  itkFeatureGenerator.txx
VirtualFractureReconstructionCLI/Core/Texture/: ibiaScalarTextureCalculator.h  ibiaScalarTextureCalculator.txx
VirtualFractureReconstructionCLI/Core/Transform/: ibiaApplyTransformationFromMatrix.cpp  ibiaApplyTransformationFromMatrix.h  ibiaConvertBinaryImageToMeshSOFilter.h  ibiaConvertBinaryImageToMeshSOFilter.txx
VirtualFractureReconstructionCLI/Core/Utilities/: ActivePointSelector.cpp  ActivePointSelector.h  AlglibArray2ImageConverter.h  AlglibArray2ImageConverter.txx  AlglibArrayWriter.cpp  AlglibArrayWriter.h  BoundingBoxCalculator.cpp  BoundingBoxCalculator.h  ComputeMahalanobisDistance.cpp  ComputeMahalanobisDistance.h  DeepCopy.h  DeepCopy.txx  FileOutputWriter.cpp  FileOutputWriter.h  TransformWriter.cpp  TransformWriter.h  itkImageToVTKImageFilter.h  itkImageToVTKImageFilter.txx
VirtualFractureReconstructionCLI/Core/memini/: ibiaMemIni.cxx  ibiaMemIni.h  ibiaMemIniSectionEntry.cxx  ibiaMemIniSectionEntry.h  ibiaStringTools.cxx  ibiaStringTools.h
VirtualFractureReconstructionCLI/Testing/: CMakeLists.txt
